--- a/src/Imview.Core/MainWindow.axaml
+++ b/src/Imview.Core/MainWindow.axaml
@@ -3,8 +3,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:Imview.Core.Controls"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
         x:Class="Imview.Core.MainWindow"
-        Title="Imview.Core">
+        Title="Imview">
     <controls:QuestTemplateEditor />
 </Window>
