--- a/src/Imview.Core/Views/MainWindow.axaml
+++ b/src/Imview.Core/Views/MainWindow.axaml
@@ -4,16 +4,24 @@
         xmlns:views="clr-namespace:Imview.Core.Views"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
         x:Class="Imview.Core.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Title="Imview"
-        MinWidth="500"
+        MinWidth="800"
         MinHeight="600"
         Background="#1E1E1E">
 
     <Panel>
-        <views:SplashPage />
+        <ContentControl Content="{Binding CurrentViewModel}">
+            <ContentControl.DataTemplates>
+                <DataTemplate DataType="{x:Type vm:SplashPageViewModel}">
+                    <views:SplashPage />
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:QuestTemplateEditorViewModel}">
+                    <views:QuestTemplateEditorView />
+                </DataTemplate>
+            </ContentControl.DataTemplates>
+        </ContentControl>
     </Panel>
-
 </Window>
