--- a/src/Imview.Core/Views/SplashPage.axaml
+++ b/src/Imview.Core/Views/SplashPage.axaml
@@ -2,8 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:Imview.Core.ViewModels"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600"
-             x:Class="Imview.Core.Views.SplashPage">
+             x:Class="Imview.Core.Views.SplashPage"
+             x:DataType="vm:SplashPageViewModel">
 
     <Grid Background="#1E1E1E">
         <StackPanel VerticalAlignment="Center" 
@@ -49,6 +51,7 @@
                     
                     <Button Name="CreateQuestButton"
                             Content="Create Quest"
+                            Command="{Binding Sections[0].Command}"
                             HorizontalAlignment="Stretch"
                             Height="40"
                             Classes="accent"/>
