feat: add `MessageService`

--- a/src/Imview.Core/App.axaml
+++ b/src/Imview.Core/App.axaml
@@ -5,6 +5,7 @@
              
     <Application.Styles>
         <FluentTheme/>
+        <StyleInclude Source="avares://Notification.Avalonia/Themes/Generic.xaml" />
     </Application.Styles>
              
 </Application>
