--- a/src/Imview.Core/Views/MainWindow.axaml
+++ b/src/Imview.Core/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:views="clr-namespace:Imview.Core.Views"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="clr-namespace:Avalonia.Notification.Controls;assembly=Notification.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
         x:Class="Imview.Core.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -12,8 +13,12 @@
         MinHeight="600"
         Background="#1E1E1E">
 
-    <Panel>
-        <ContentControl Content="{Binding CurrentViewModel}">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <ContentControl Content="{Binding CurrentViewModel}" Grid.Column="0">
             <ContentControl.DataTemplates>
                 <DataTemplate DataType="{x:Type vm:SplashPageViewModel}">
                     <views:SplashPage />
@@ -23,5 +28,7 @@
                 </DataTemplate>
             </ContentControl.DataTemplates>
         </ContentControl>
-    </Panel>
+
+        <controls:NotificationMessageContainer Manager="{Binding Manager}" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10"/>
+    </Grid>
 </Window>
