feat: add object property blob analyze

--- a/src/Imview.Core/Views/MainWindow.axaml
+++ b/src/Imview.Core/Views/MainWindow.axaml
@@ -29,6 +29,9 @@
                 <DataTemplate DataType="{x:Type vm:PacketQuestViewModel}">
                     <views:PacketQuestView />
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:ObjectPropertyBlobViewModel}">
+                    <views:ObjectPropertyBlobView />
+                </DataTemplate>
             </ContentControl.DataTemplates>
         </ContentControl>
 
